--- a/proxy.yaml
+++ b/proxy.yaml
@@ -10,6 +10,7 @@ services:
     - "127.0.0.1:8080:8080"
     volumes:
     - ./haproxy/reverse/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:rw 
+    user: "root"
 
   ingress-proxy:
     image: nginx:1.21.1
